fix: horizontal scroll doen't exist anymore

--- a/src/sass/main/_hero.sass
+++ b/src/sass/main/_hero.sass
@@ -148,7 +148,7 @@
   .hero
     &-image
       left: auto
-      right: -5%
+      right: -4%
       height: 392.71px
     &__phrase
       display: none
